Merged revisions 75007 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r75007 | antoine.pitrou | 2009-09-21 23:17:48 +0200 (lun., 21 sept. 2009) | 7 lines

  Issue #6236, #6348: Fix various failures in the io module under AIX
  and other platforms, when using a non-gcc compiler. Patch by egreen.

  In addition, I made explicit the signedness of all bitfields in the
  IO library.
........